--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -84,16 +84,18 @@
             updateSpanText('currentDeposit',depositNumber);
             updateSpanText('currentBalance',depositNumber);
 
-            document.getElementById('depositAmount').value = "";
+            document.getElementById('depositAmount').value = '';
         });
 
         //withdraw button event handler
         const withdrawBtn = document.getElementById('addWithdraw');
         withdrawBtn.addEventListener('click',function(){
             const withdrawNumber = getInputNumber('withdrawAmount');
-            console.log(withdrawNumber);
+            updateSpanText('currentWithdraw',withdrawNumber);
+            updateSpanText('currentBalance',-1 * withdrawNumber);
+            document.getElementById('withdrawAmount').value = '';
         })
-        //functoion
+        //function
         function getInputNumber(id){
             const amount = document.getElementById(id).value;
             const amountNumber = parseFloat(amount);
@@ -102,10 +104,10 @@
         }
         
         // deposit button handler function
-        function updateSpanText(id, depositNumber){
+        function updateSpanText(id, addedNumber){
             const current = document.getElementById(id).innerText;
             const currentNumber = parseFloat(current);
-            const totalAmount = depositNumber + currentNumber;
+            const totalAmount = addedNumber + currentNumber;
             document.getElementById(id).innerText = totalAmount;
         }
     </script> 
